# rewind-recorder

./: .gitignore  .vulture_whitelist.py  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
rewind_recorder/: __init__.py  __main__.py  app.py  audio.py  audio_manager.py  autosave.py  capture.py  config.py  errors.py  export.py  main_window.py  paths.py  playback.py  preview.py  project.py  qtutil.py  timecode.py  types.py  widgets.py  windows_api.py  workers.py
